Update Fixed Position

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
             text-align: center;
             background-color: #333;
             color: #fff;
@@ -49,13 +48,49 @@
 <body>
     <h1>Chatbot Test</h1>
     <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+    <p>Welcome to the tester page for the chatbot.</p>
+
+
+
 </body>
 <script>
     // Create an iframe for the chatbot
     const chatbotIframe = document.createElement('iframe');
     chatbotIframe.src = 'https://tech-mate-chatbot.vercel.app';
     chatbotIframe.style.cssText = `
-        position: absolute;
+        position: fixed;
         bottom: 10px;
         right: 10px;
         border-radius: 16px;
